Bug 250070 - Imap resource refuses to sync after modifying subscription
Summary: Imap resource refuses to sync after modifying subscription
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-03 20:12 UTC by Sabine Faure
Modified: 2010-10-02 01:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-09-03 20:12:28 UTC
Version:           unspecified
OS:                Linux

After the user removes the subscription to some of the shared folders, the Imap resource does not synchronized anymore.

It is now completely unresponsive both when I launch a sync from the N900 or the Akonadi console whereas it has been working fine all afternoon.


Reproducible: Didn't try

Steps to Reproduce:
- Launch Kmail-mobile
- Launch Akonadi console on the N900 from another computer
- Click on the Imap account
- Open the 'Actions' tab
- Click on 'Account'
- Click on 'Synchronize emails in account'
- You should see the Imap account syncing correctly from Akonadi console
- Once the syncing is done click on 'Manage Local Subscriptions...'
- Uncheck all the shared folders from the subscription until all you have left checked is your Imap account and your Local Folders
- Click on 'Ok'
- Relaunch a sync of the Imap account 

Actual Results:  
Nothing happens. There is no synchronization of the Imap resource anymore eventhough it is still displayed as 'Ready' in Akonadi console.

Launching a sync from both the N900 and Akonadi console fails

Expected Results:  
The Imap account synchronization should work even when unsubscribing from the shared folders.

Note: I can still launch a sync of the Local folders from the N900.

This bug looks suspiciously like what happened to me last week and would explain why everytime I would remove the shared folders subscription the Imap would stop syncing whereas it was syncing fine before.


N900, 4:4.5~20100903.1171248-1maemo1.1171237
Comment 1 Kevin Ottens 2010-09-21 12:56:04 UTC
SVN commit 1177819 by ervin:

Make sure the subscribe/unsubscribe messages are always handled to avoid
making resource schedulers stuck when the user manage his local
subscriptions.

CCMAIL: vkrause@kde.org
BUG: 250070


 M  +17 -0     agentbase.cpp  
 M  +2 -0      agentbase_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1177819
Comment 2 Sabine Faure 2010-09-23 14:57:18 UTC
I retested this today and now the Imap resource synchronizes and do not get stuck anymore when modifying the local subscription so I am verifying this bug.

However, I have a bug in the Folder view when modifying the local subscription. See bug #250714 for folder view not updating properly.


N900, 4:4.5~20100922.1178352-1maemo1.1177763
Comment 3 Sabine Faure 2010-10-02 01:33:50 UTC
I am closing this bug because thought it is still reproducible because I reported a new more accurate one (see bug #252273)

N900, 4:4.5~20101001.1181533-1maemo1.1181469