Make sure the subscribe/unsubscribe messages are always handled to avoid making resource schedulers stuck when the user manage his local subscriptions.

CCMAIL: vkrause@kde.org
BUG: 250070

svn path=/trunk/KDE/kdepimlibs/; revision=1177819