agentbase_p.h
@@ -112,6 +112,8 @@ class AgentBasePrivate : public QObject
     void collectionChanged( const Akonadi::Collection &collection, const QSet<QByteArray> &partIdentifiers );
     void collectionMoved( const Akonadi::Collection &collection, const Akonadi::Collection &source, const Akonadi::Collection &destination );
     void collectionRemoved( const Akonadi::Collection &collection );
+    void collectionSubscribed( const Akonadi::Collection &collection, const Akonadi::Collection &parent );
+    void collectionUnsubscribed( const Akonadi::Collection &collection );
 };
 
 }
